--- a/documentacion.html
+++ b/documentacion.html
@@ -45,7 +45,7 @@
                     <a href="sha_256.pdf" download="sha_256" class="btn btn-dark btn-lg">
                         CÓDIGO PYTHON ALGORITMO SHA-256
                     </a>
-                         <a href="https://jesus-santillan.github.io/" class="btn btn-dark btn-lg">
+                         <a href="https://jesus-santillan.github.io/" target="_blank" rel="noopener noreferrer">
                         REGRESAR AL PROYECTO PRINCIPAL
                     </a>
                 </div>
