intento de arreglo numero 57

--- a/documentacion.html
+++ b/documentacion.html
@@ -19,6 +19,28 @@
             box-shadow: 0 4px 15px rgba(0,0,0,0.1);
             background: white;
         }
+        .enl_ex{
+            background-color: rgb(33, 37, 41);
+            color: rgb(255, 255, 255);
+            cursor: pointer;
+            font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+            font-size: 20px;
+            font-weight: 400;
+            line-height:30px;
+            text-align:center;
+            vertical-align: middle;
+            user-select:none;
+            text-decoration-color:rgb(255, 255, 255);
+            text-decoration-line:none;
+            text-decoration-style:solid;
+            text-decoration-thickness:auto;
+            transition-behavior:normal;
+            transition-delay:0s;
+            transition-duration:0s;
+            transition-property:none;
+            transition-timing-function:ease;
+                
+        }   
     </style>
 </head>
 <body>
@@ -45,7 +67,7 @@
                     <a href="sha_256.pdf" download="sha_256" class="btn btn-dark btn-lg">
                         CÓDIGO PYTHON ALGORITMO SHA-256
                     </a>
-                    <a href="https://jesus-santillan.github.io/" class="btn btn-dark btn-lg">
+                    <a href="https://jesus-santillan.github.io/" target="_blank" rel="noopener noreferrer" class=".enl_ex">
                         REGRESAR AL PROYECTO PRINCIPAL
                     </a>
                 </div>
