--- a/documentacion.html
+++ b/documentacion.html
@@ -39,7 +39,9 @@
             transition-duration:0s;
             transition-property:none;
             transition-timing-function:ease;
-                
+            padding-top: 20px;
+        	padding-bottom: 20px;
+        	border-radius: 5px;  
         }   
     </style>
 </head>
