Fix hover style for enl_ex class in documentacion.html

--- a/documentacion.html
+++ b/documentacion.html
@@ -43,6 +43,8 @@
         	padding-bottom: 8px;
         	border-radius: 5px;  
         }   
+        .enl_ex: hover{
+            background-color: #495057;
     </style>
 </head>
 <body>
